# lincxx

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md
build_llvm/: CMakeCache.txt  Makefile  cmake_install.cmake
build_llvm/test/gtest/: Makefile  cmake_install.cmake
example/: CMakeLists.txt  example.cpp
include/: lincxx.details.and.h  lincxx.details.equals.h  lincxx.details.greater.h  lincxx.details.h  lincxx.details.lesser.h  lincxx.details.or.h  lincxx.h  lincxx.hpp  lincxx.param.h  lincxx.query.h
test/: test-conditions.cpp  test-filters.cpp  test-from-sources.cpp  test-params.cpp  test-to_list.cpp  test-transforms.cpp  test-visit.cpp  test_tools.h
